# mikrotik-hotspot-manager-backend-app

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py  a73f7eac6daa_update_user_email_phone_number_optional.py  b19a7ebd5cc2_add_subdomain_referral_code_to_vendors_.py  fe385c568170_update_phone_to_phone_number.py
app/: main.py
app/api/v1/: router.py
app/api/v1/dependencies/: auth.py
app/api/v1/routes/: auth.py  logs.py  profile.py  routers.py  subdomains.py  users.py  vendors.py
app/api/v1/routes/shared/: profile.py
app/api/v1/routes/superadmin/: logs.py  users.py  (+3 more)
app/core/: config.py  enums.py  scheduler.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  activity_log.py  email_verification.py  refresh_token.py  router.py  user.py  vendor.py
app/schemas/: activity_log.py  auth.py  profile.py  router.py  user.py  vendor.py
app/services/: auth_service.py  cloudinary_service.py  email_service.py  log_service.py  router_service.py  user_service.py  vendor_service.py
mikrotik-hotspot-manager-backend-api-tests/: bruno.json
mikrotik-hotspot-manager-backend-api-tests/Admin/Alerts/: Fetch single alert details.bru  folder.bru
mikrotik-hotspot-manager-backend-api-tests/Admin/Authentication/: Change own password.bru  Login.bru  Logout All.bru  Logout.bru
mikrotik-hotspot-manager-backend-api-tests/Admin/Profile/: Get Profile.bru
mikrotik-hotspot-manager-backend-api-tests/Admin/Reports/: folder.bru
mikrotik-hotspot-manager-backend-api-tests/environments/: Development.bru
scripts/: seed.py
